# web-scraper

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_REVIEW.md  Dockerfile  README.md  basic-scraper.spec  pyproject.toml  requirements.txt  strigil.spec
.github/workflows/: build.yml
scripts/: build_linux.sh  build_mac.sh  build_windows.bat  run_cli.py  run_gui.py  zip_dist.py
strigil/: __init__.py  _deps.py  cli.py  discovery.py  extractors.py  fetcher.py  flaresolverr.py  gui.py  hardware.py  keep_awake.py  pipeline.py  robots.py  schema.py  storage.py
web_scraper/: __init__.py  _deps.py  cli.py  discovery.py  extractors.py  fetcher.py  gui.py  hardware.py  pipeline.py  robots.py  storage.py
