[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strigil"
version = "0.4.0"
description = "Strigil: PDFs, text, and images from websites at high quality, stored locally."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "httpx",
    "beautifulsoup4",
    "lxml",
    "readability-lxml",
    "tqdm",
    "playwright",
]

[project.optional-dependencies]
readability = ["readability-lxml"]
bundle = ["pyinstaller>=6.0"]
progress = ["tqdm"]

[project.urls]
Homepage = "https://github.com/sethstrickland/strigil"
Repository = "https://github.com/sethstrickland/strigil"

[project.scripts]
strigil = "strigil.cli:main"
strigil-gui = "strigil.gui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["strigil*"]
